Closed
Bug 1482415
Opened 3 years ago
Closed 3 years ago
Crash in mozilla::layers::ContentClientRemoteBuffer::EndPaint
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox61 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | fixed |
People
(Reporter: marcia, Assigned: rhunt)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
811 bytes,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-bbc2ff4d-db6e-4e92-a4df-21f790180810. ============================================================= Seen while looking at nightly crashes - crashes started using 20180810100128: https://bit.ly/2AZe4FQ. Two unique signatures spotted so far. Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cea8cf3f6abefaccb80a640b47aad8bcdb3115ae&tochange=d999fb858fb2c007c5be4af72bce419c63c69b8e Looks as if Bug 1478815 touched code in this area. ni on rhunt Top 10 frames of crashing thread: 0 xul.dll mozilla::layers::ContentClientRemoteBuffer::EndPaint gfx/layers/client/ContentClient.cpp:617 1 xul.dll mozilla::layers::ClientPaintedLayer::RenderLayerWithReadback gfx/layers/client/ClientPaintedLayer.cpp:171 2 xul.dll mozilla::layers::ClientContainerLayer::RenderLayer gfx/layers/client/ClientContainerLayer.h:58 3 xul.dll bool mozilla::layers::ClientLayerManager::EndTransactionInternal gfx/layers/client/ClientLayerManager.cpp:386 4 xul.dll mozilla::layers::ClientLayerManager::EndTransaction gfx/layers/client/ClientLayerManager.cpp:444 5 xul.dll nsDisplayList::PaintRoot layout/painting/nsDisplayList.cpp:2759 6 xul.dll nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3842 7 xul.dll mozilla::PresShell::Paint layout/base/PresShell.cpp:6349 8 xul.dll nsViewManager::ProcessPendingUpdatesForView view/nsViewManager.cpp:412 9 xul.dll nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2042 =============================================================
Flags: needinfo?(rhunt)
Updated•3 years ago
|
Assignee | ||
Comment 1•3 years ago
|
||
This can happen if we fail to allocate a buffer in BeginPaint but have tried to start an async paint.
Flags: needinfo?(rhunt)
Attachment #8999805 -
Flags: review?(nical.bugzilla)
Updated•3 years ago
|
Attachment #8999805 -
Flags: review?(nical.bugzilla) → review+
Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/mozilla-inbound/rev/fea8a70ad612 Handle case where we failed to allocate a buffer and are async painting. r=nical
Comment 3•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/fea8a70ad612
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•3 years ago
|
Assignee: nobody → rhunt
status-firefox61:
--- → unaffected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•