Bug 1482415 - Handle case where we failed to allocate a buffer and are async painting. r=nical